docs: organize doc files

--- a/docs/Usage/1.record.md
+++ b/docs/Usage/1.record.md
@@ -14,8 +14,8 @@ roslaunch lfd_interface lfd_recorder.launch config:=fr3 name:=DEMO_NAME
 To stop the recording, press `Ctrl+C`. The demonstration will be saved under `lfd_interface/data/demonstrations/`.
 
 <div style="display: flex; gap: 10%;">
-  <img src="../images/kinesthetic.png" alt="kinesthetic setup" style="width: 45%; object-fit: contain;"/>
-  <img src="../images/kinesthetic_rviz.png" alt="kinesthetic Rviz" style="width: 40%; object-fit: contain;"/>
+  <img src="./images/kinesthetic.png" alt="kinesthetic setup" style="width: 45%; object-fit: contain;"/>
+  <img src="./images/kinesthetic_rviz.png" alt="kinesthetic Rviz" style="width: 40%; object-fit: contain;"/>
 </div>
 
 ## What is Recorded
