docs: organize doc files

--- a/docs/Usage/3.lfd.md
+++ b/docs/Usage/3.lfd.md
@@ -23,6 +23,6 @@ The topics and actions provided allow for flexibility in LfD, including planning
 
 <p align="center">
   <a href="">
-    <img src="./images/lfd.png" alt="Logo" width="40%">
+    <img src="https://github.com/snt-arg/dfl-toro/blob/main/docs/images/lfd.png?raw=true" alt="Logo" width="40%">
   </a>
 </p>
